--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -150,6 +150,11 @@ body {
 }
 
 .button_orange:hover {
+    background: #e47209;
+}
+
+.button_orange:active {
+    vertical-align: middle;
     background: #4b9200;
 }
 
@@ -251,6 +256,11 @@ body {
 }
 
 .button_round:hover {
+    background: #e47209;
+}
+
+.button_round:active {
+    vertical-align: middle;
     background: #4b9200;
 }
 
@@ -526,7 +536,68 @@ body {
 .line_scroll {
     left: 500px;
     position: absolute;
-    bottom: 267px;
+    bottom: 235px;
+    max-width: 600px;
+    width: 100%;
+    border: 0.5px solid transparent;
+    background: linear-gradient(
+            315.75deg,
+            rgba(254, 189, 171, 0.74) 30.06%,
+            rgba(243, 169, 248, 0.66) 50.74%,
+            #e0d8f0 80.49%,
+            #eaf7fe 127.9%,
+            #eaf7fe 149.54%
+        ),
+        linear-gradient(
+            315.75deg,
+            rgba(254, 189, 171, 0.74) 30.06%,
+            rgba(243, 169, 248, 0.66) 50.74%,
+            #e0d8f0 80.49%,
+            #eaf7fe 127.9%,
+            #eaf7fe 149.54%
+        );
+    box-shadow: inset 0 0 0 10vw #f5f7f6;
+    border-radius: 5px;
+    -webkit-appearance: none;
+    transition: ease-in-out 0.5s;
+    cursor: pointer;
+    margin: 19px auto 32px auto;
+}
+
+.line_scroll::-webkit-slider-thumb {
+    max-width: 115.19px;
+    height: 6px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #fe9013;
+    -webkit-appearance: none;
+}
+
+.line_scroll::-moz-range-thumb {
+    max-width: 115.19px;
+    height: 6px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #fe9013;
+    -webkit-appearance: none;
+}
+
+.line_scroll::-webkit-slider-thumb {
+    max-width: 115.19px;
+    height: 6px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #fe9013;
+    -webkit-appearance: none;
+}
+
+.line_scroll::-moz-range-thumb {
+    max-width: 115.19px;
+    height: 6px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #fe9013;
+    -webkit-appearance: none;
 }
 
 .button_orange_testimonials {
@@ -583,9 +654,9 @@ body {
 }
 
 .footer-buttons li:hover {
-    color: #4b9200;
-    border: 1px solid #4b9200;
-    background-color: #4b9200;
+    color: #e47209;
+    border: 1px solid #e47209;
+    background-color: #e47209;
 }
 
 .social-buttons__item {
@@ -665,13 +736,23 @@ body {
     background: #111115;
 }
 
-.footer_right button {
+.button_submit {
     position: absolute;
     width: 130px;
     height: 40px;
     right: 220px;
     top: 80px;
     font-size: 16px;
-    color: #4b9200;
+    color: #000000;
     cursor: pointer;
+}
+
+.button_submit:hover {
+    color: #74aa3c;
+    border-color: #74aa3c;
+}
+
+.button_submit:active {
+    color: #d31414;
+    border-color: #d31414;
 }
